# yahriels

./: BehaviorGripStrengthData.xlsx  GEM_Application.txt  Harvard.txt  MIT.txt  Python Commands.txt  README.md  Stanford.txt  Test.py  UCBerkeley.txt  Yahriel_Profile.txt  dummy.txt  page.html  requirements.txt  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json
Data Analysis/: Data Tables.xlsx  Notes  Notes.txt  Voltage_Frequency_Analysis_V1.m  ~$DOE(MEMS)_FM.xlsx
Data Analysis/Data Group 1/: MEMS Design Data Paper.csv  MEMS Design Data.csv
Data_Analysis/: V2.m  fft_Fun.m
Example Python Scripts/: Cross Validation.py  ProgrammingLab1.ipynb  Snowflake.py  Test 2 (print).py  guccigang.py
H-Reflex Python/: MANIFEST.in  Python_Commands.txt  interface.py  interface.ui  main.py
Lit Reviews/: Literature_Review_Builder.txt
Manuscript Stuff/: Journals of Interest.xlsx  MEMS Project Draft  Feb 2022.docx
Manuscript_Stuff/: main.tex  ref.bib
NerveRegenData/: StimDataPlot.py  StimGroupDataaaa.txt  Table_Weeks_Timeline.py
Neurophys/: Idea Formulation.docx  In-Class Discussion NOtes.docx  Notes.txt  Outlining - Copy.docx  Outlining.docx  Written Assignment 1.docx  ~$tlining - Copy.docx  ~$tlining.docx
SOP Writing/: SOP_Concept.txt
Stats/: .RData  .Rhistory  Yahriel_Salinas-Reyes_7340_HW#_FA24.Rmd
Workspace/: H-Reflex App - AM 4100_Notes  H-Reflex Debugging Notes  Master.txt  Working Group Prezi Concept  Yahriel_Profile.txt  dummy.txt
lib/: FellowshipandGraduatePrograms.txt  GEM_Application.txt  Harvard.txt  MIT.txt  UCBerkeley.txt
src/: Caltech.txt
(+411 files in other folders)
